--- a/src/input.css
+++ b/src/input.css
@@ -18,6 +18,9 @@ body {
     h4{
       @apply text-white text-2xl md:text-3xl lg:text-4xl font-semibold mb-10 
     }
+    h5{
+      @apply text-white text-lg md:text-xl font-semibold uppercase
+    }
     p{
       @apply text-white text-base  lg:text-lg  font-medium
     }
@@ -29,7 +32,7 @@ body {
 }
 
 .nav-link {
-  @apply hover:underline underline-offset-8 decoration-2 decoration-[#F9A51A] transition-all duration-300;
+  @apply hover:underline underline-offset-8 decoration-2 decoration-[#F9A51A] transition-all duration-300 text-white;
 }
 .btn{
 
