--- a/src/output.css
+++ b/src/output.css
@@ -491,6 +491,11 @@
       flex-direction: row-reverse;
     }
   }
+  .md\:items-end {
+    @media (width >= 48rem) {
+      align-items: flex-end;
+    }
+  }
   .md\:space-x-8 {
     @media (width >= 48rem) {
       :where(& > :not(:last-child)) {
