--- a/src/output.css
+++ b/src/output.css
@@ -772,8 +772,9 @@ body {
       }
     }
   }
-  .nav-link {
+  .nav-link.active {
     color: var(--color-white);
+    text-decoration-line: underline;
     text-decoration-color: #F9A51A;
     text-decoration-thickness: 2px;
     text-underline-offset: 8px;
@@ -782,11 +783,6 @@ body {
     transition-duration: var(--tw-duration, var(--default-transition-duration));
     --tw-duration: 500ms;
     transition-duration: 500ms;
-    &:hover {
-      @media (hover: hover) {
-        text-decoration-line: underline;
-      }
-    }
   }
   .btn {
     display: inline-flex;
